# paperscraper

./: .agent-lint-allowlist.yaml  .dockerignore  .env.example  .gitignore  01_TECHNISCHE_ARCHITEKTUR.md  02_USER_STORIES.md  03_CLAUDE_CODE_GUIDE.md  04_ARCHITECTURE_DECISIONS.md  05_IMPLEMENTATION_PLAN.md  06_LOVABLE_FEATURES.md  07_LOVABLE_REBUILD_PLAN.md  AGENTS.md  CLAUDE.md  CLAUDE_EXECUTION_LIST.md  DEPLOYMENT.md  Dockerfile  README.md  SETUP.md  alembic.ini  docker-compose.yml  openapi.json  package-lock.json  package.json  playwright.config.ts  pyproject.toml
.claude/agents/: ai-ml-scoring-engineer.md  database-architect.md  devops-engineer.md  python-backend-dev.md  react-frontend-dev.md  security-engineer.md  test-engineer.md
.claude/commands/: sprint.md  story.md
.github/scripts/: check_arch_docs_gate.sh
.github/workflows/: ci.yml  deploy.yml
.paperscraper-next/: AGENTS.md  README.md
.paperscraper-next/claude-code/: CLAUDE.md  IMPLEMENTATION_PLAN.md  PHASE_01_FOUNDATION.md  PHASE_02_INGESTION.md  PHASE_03_GRAPH.md  PHASE_04_SCORING.md  PHASE_05_FRONTEND.md  PHASE_06_PIPELINE.md  PHASE_07_QUERY.md  PHASE_08_POLISH.md  STAGE_1_LOCAL_MVP.md  STAGE_2_PRODUCTIZATION.md
.paperscraper-next/engineering/: ARCHITECTURE.md  DATA_MODEL.md  ENGINES.md  PLUGIN_SYSTEM.md
.paperscraper-next/pm/: MVP_SCOPE.md  PERSONAS.md  V1_STRENGTHS.md  VISION.md
.playwright-cli/: page-2026-02-10T19-00-45-774Z.yml  page-2026-02-10T19-01-03-249Z.yml  page-2026-02-10T19-01-34-676Z.yml  page-2026-02-10T19-03-44-836Z.yml  page-2026-02-10T19-05-29-857Z.yml  page-2026-02-10T19-05-33-018Z.yml  page-2026-02-10T19-05-38-804Z.yml  page-2026-02-10T19-05-47-492Z.yml  page-2026-02-10T19-06-41-662Z.yml  page-2026-02-10T19-08-09-926Z.yml  page-2026-02-10T19-08-56-056Z.yml  page-2026-02-10T19-09-06-123Z.yml  page-2026-02-10T19-09-13-934Z.yml  page-2026-02-10T19-09-21-477Z.yml  page-2026-02-10T19-09-33-414Z.yml  page-2026-02-10T19-09-42-137Z.yml  page-2026-02-10T19-10-40-168Z.yml  page-2026-02-10T19-10-43-362Z.yml  page-2026-02-10T19-11-01-716Z.yml  page-2026-02-10T19-12-13-400Z.yml
alembic/: env.py
alembic/versions/: 20260128_2221_51fca12defc7_initial_auth_models.py  20260129_0001_a1b2c3d4e5f6_add_papers_and_authors.py  20260129_0002_b2c3d4e5f6g7_add_scoring_models.py  20260129_0003_c3d4e5f6g7h8_add_projects_models.py  20260130_0001_d4e5f6g7h8i9_add_one_line_pitch.py  20260131_0001_e5f6g7h8i9j0_sprint9_enhancements.py  20260131_0002_f6g7h8i9j0k1_add_saved_searches.py  20260131_0003_f6g7h8i9j0k2_sprint10_author_contacts.py  20260131_0004_g7h8i9j0k1l2_add_alerts.py  20260131_0005_h8i9j0k1l2m3_add_paper_classification.py  20260131_0006_i9j0k1l2m3n4_sprint13_user_management.py  20260131_0007_j0k1l2m3n4o5_sprint15_audit_logs.py  20260131_sprint14_onboarding_tracking.py  20260203_0001_l2m3n4o5p6q7_multi_tenancy_and_performance.py  20260205_0001_m3n4o5p6q7r8_add_researcher_groups.py  20260205_0002_n4o5p6q7r8s9_add_research_submissions.py  20260205_0003_o5p6q7r8s9t0_add_badges_and_knowledge.py  20260205_0004_p6q7r8s9t0u1_add_transfer_conversations.py  20260205_0005_q6r7s8t9u0v1_add_team_readiness_and_model_config.py  20260206_0001_r7s8t9u0v1w2_add_developer_api.py  20260206_0002_scheduled_reports.py  20260206_0003_s8t9u0v1w2x3_add_retention_policies.py  20260206_0004_a1b2c3d4e5f6_add_organization_branding.py  20260206_0005_b2c3d4e5f6g7_add_paper_created_by.py  20260206_0006_c3d4e5f6g7h8_search_activity_badge_org.py  20260206_0007_d4e5f6g7h8i9_add_notifications.py  20260209_0001_sprint37_foundations_pipeline.py  20260213_0001_workflow_assignment.py  20260214_0001_library_core.py  20260214_0002_paper_text_chunks.py  20260214_0003_paper_highlights.py  20260214_0004_zotero_sync_tables.py  20260214_0005_trend_radar.py  20260216_0001_discovery_profiles.py  20260216_0002_global_score_cache.py  20260217_0001_research_groups.py  20260217_0002_research_groups_indexes.py  20260217_0003_model_key_encryption.py  20260218_0001_pipeline_v2_consolidation.py  20260220_0001_qdrant_typesense_migration.py  (+2 more)
docs/: INDEX.md
docs/architecture/: DECISIONS.md  V2_ARCHITECTURE.md
docs/implementation/: PHASE_01_FOUNDATION.md  PHASE_02_FEATURES.md  PHASE_03_BETA.md  PHASE_04_LOVABLE.md  PHASE_05_STABILIZATION.md  PHASE_06_SECURITY.md  PHASE_07_PLATFORM.md  PHASE_08_ENTERPRISE.md  PHASE_09_QUALITY.md  PHASE_10_FOUNDATIONS.md  STATUS.md
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/playwright-report/: index.html
e2e/test-results/: .last-run.json
e2e/tests/: analytics.spec.ts  auth.spec.ts  badges.spec.ts  dashboard.spec.ts  fixtures.ts  groups.spec.ts  kanban.spec.ts  knowledge.spec.ts  library.spec.ts  navigation.spec.ts  org-settings.spec.ts  paper-detail.spec.ts  papers.spec.ts  projects.spec.ts  reader.spec.ts  responsive.spec.ts  saved-searches.spec.ts  search.spec.ts  settings.spec.ts  submissions.spec.ts  team.spec.ts  theme.spec.ts  transfer.spec.ts  zotero-sync.spec.ts
frontend/: .dockerignore  Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/.storybook/: main.ts
frontend/docs/: frontend-v2-baseline.md
frontend/scripts/: check-frontend-budgets.mjs
frontend/src/: App.tsx  index.css
frontend/storybook-static/: iframe.html  index.json  project.json
paper_scraper/: __init__.py
scripts/: entrypoint.sh  export_openapi.py  init-db.sql
tests/: __init__.py  conftest.py  test_alerts.py  test_analytics.py  test_audit.py  test_auth.py  test_authors.py  test_badges.py  test_csv_utils.py  test_developer.py  test_email.py  test_export.py  test_groups.py  test_ingestion_async_api.py  test_ingestion_pipeline.py  test_knowledge.py  test_library.py  test_library_highlights.py  test_llm_client_factory.py  test_model_settings.py  test_notes.py  test_papers.py  test_permissions.py  test_production.py  test_projects.py  test_reports.py  test_repository_sync.py  test_saved_searches.py  test_scoring.py  test_search.py  test_sprint11.py  test_sprint24.py  test_storage.py  test_submissions.py  test_transfer.py  test_zotero_sync.py
(+507 files in other folders)
