[tool.poetry]
name = "paper-scraper"
version = "0.1.0"
description = "AI-powered SaaS platform for automated analysis of scientific publications"
authors = ["Paper Scraper Team"]
readme = "README.md"
packages = [{include = "paper_scraper"}]

[tool.poetry.dependencies]
python = "^3.11"

# Web Framework
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.6"

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"  # Sync driver for Alembic migrations
alembic = "^1.13.0"
pgvector = "^0.2.4"

# Settings & Validation
pydantic = {extras = ["email"], version = "^2.5.0"}
pydantic-settings = "^2.1.0"

# Authentication
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.0.0"  # Pin to 4.x for passlib compatibility

# Background Jobs (arq instead of Celery)
arq = "^0.25.0"

# HTTP Client
httpx = "^0.26.0"

# AI/LLM
openai = "^1.10.0"

# Object Storage
boto3 = "^1.34.0"
minio = "^7.2.0"

# PDF Processing
pymupdf = "^1.24.0"

# Observability
langfuse = "^2.7.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.39.0"}

# Rate Limiting
slowapi = "^0.1.9"

# Utilities
python-dateutil = "^2.8.2"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
httpx = "^0.26.0"
greenlet = "^3.0.0"  # For SQLAlchemy async operations
testcontainers = {version = "^4.0.0", extras = ["postgres"]}  # Real PostgreSQL in tests
fakeredis = {version = "^2.21.0", extras = ["aioredis"]}  # In-memory Redis for tests
ruff = "^0.1.0"
mypy = "^1.8.0"
pre-commit = "^3.6.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::sqlalchemy.exc.MovedIn20Warning",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
# Minimum coverage percentage for tests to pass
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
branch = true
source = ["paper_scraper"]
omit = [
    "paper_scraper/jobs/*",
    "paper_scraper/api/main.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 60
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["paper_scraper"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
